--- a/UnityAopSpike/packages/repositories.config
+++ b/UnityAopSpike/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\UnityAopSpike.AcceptanceTests\packages.config" />
   <repository path="..\UnityAopSpike.Web.UnitTests\packages.config" />
   <repository path="..\UnityAopSpike.Web\packages.config" />
 </repositories>
