--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,5 @@ $RECYCLE.BIN/
 # NuGet executable
 NuGet.exe
 
+/UnityAopSpike/packages/EntityFramework.6.1.1
+/UnityAopSpike/packages/SpecFlow.1.9.0
