--- a/UnityAopSpike/packages/repositories.config
+++ b/UnityAopSpike/packages/repositories.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\UnityAopSpike.AcceptanceTests\packages.config" />
+  <repository path="..\UnityAopSpike.DataAccess.UnitTests\packages.config" />
   <repository path="..\UnityAopSpike.DataAccess\packages.config" />
+  <repository path="..\UnityAopSpike.Services.UnitTests\packages.config" />
+  <repository path="..\UnityAopSpike.Services\packages.config" />
   <repository path="..\UnityAopSpike.Web.UnitTests\packages.config" />
   <repository path="..\UnityAopSpike.Web\packages.config" />
 </repositories>
