--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,4 @@ NuGet.exe
 /UnityAopSpike/packages/EntityFramework.6.1.1
 /UnityAopSpike/packages/SpecFlow.1.9.0
 /UnityAopSpike/packages/Moq.4.2.1402.2112
+/UnityAopSpike/packages
