--- a/UnityAopSpike/UnityAopSpike.Services/UnityAopSpike.Services.csproj
+++ b/UnityAopSpike/UnityAopSpike.Services/UnityAopSpike.Services.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ordering\CreateOrderService.cs" />
+    <Compile Include="ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
