Hooked up the ProductsController for getting all products.

--- a/UnityAopSpike/UnityAopSpike.Services/UnityAopSpike.Services.csproj
+++ b/UnityAopSpike/UnityAopSpike.Services/UnityAopSpike.Services.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IProductService.cs" />
     <Compile Include="Ordering\CreateOrderService.cs" />
     <Compile Include="ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
