--- a/UnityAopSpike/UnityAopSpike.Web/packages.config
+++ b/UnityAopSpike/UnityAopSpike.Web/packages.config
@@ -3,6 +3,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.1.1" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
@@ -19,5 +20,7 @@
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
   <package id="Unity.Interception" version="3.5.1404.0" targetFramework="net45" />
+  <package id="Unity.WebAPI" version="5.1" targetFramework="net45" />
+  <package id="WebApiContrib.IoC.Unity" version="0.9.3.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
