SpecFlow acceptance test working for Products web API.

--- a/UnityAopSpike/UnityAopSpike.AcceptanceTests/App.config
+++ b/UnityAopSpike/UnityAopSpike.AcceptanceTests/App.config
@@ -1,10 +1,41 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <configuration>
+  
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="acceptanceTesting" type="UnityAopSpike.AcceptanceTests.AcceptanceTestingSection"/>
   </configSections>
+
   <specFlow>
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
+    <unitTestProvider name="MsTest" />
+    <generator allowDebugGeneratedFiles="false" allowRowTests="true" generateAsyncTests="false" path="{not-specified}" />
+    <runtime stopAtFirstError="false" missingOrPendingStepsOutcome="Inconclusive" />
+    <trace traceSuccessfulSteps="true" traceTimings="false" minTracedDuration="0:0:0.1" stepDefinitionSkeletonStyle="RegexAttribute" />
+    <stepAssemblies>
+      <!-- <stepAssembly assembly="{name-of-assembly-containing-bindgins}" /> -->
+    </stepAssemblies>
+    <plugins>
+      <!-- <add name="{plugin-name}" /> -->
+    </plugins>
   </specFlow>
+
+  <connectionStrings>
+    <add name="UnityAopSpike"
+         providerName="System.Data.SqlClient"
+         connectionString="Data Source=CHRBART-W540;Integrated Security=True;Pooling=False;Database=UnityAopSpike" />
+  </connectionStrings>
+
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+
+  <acceptanceTesting>
+    <baseUrl>http://localhost:58867</baseUrl>
+  </acceptanceTesting>
+
 </configuration>
