Getting BaseUrl from appSettings.  Added DomainHooks to SpecFlow stuff.

--- a/UnityAopSpike/UnityAopSpike.AcceptanceTests/App.config
+++ b/UnityAopSpike/UnityAopSpike.AcceptanceTests/App.config
@@ -34,8 +34,8 @@
     </providers>
   </entityFramework>
 
-  <acceptanceTesting>
-    <baseUrl>http://localhost:58867</baseUrl>
-  </acceptanceTesting>
+  <appSettings>
+    <add key="BaseUrl" value="http://localhost:58867"/>
+  </appSettings>
 
 </configuration>
