--- a/UnityAopSpike/UnityAopSpike.AcceptanceTests/UnityAopSpike.AcceptanceTests.csproj
+++ b/UnityAopSpike/UnityAopSpike.AcceptanceTests/UnityAopSpike.AcceptanceTests.csproj
@@ -71,7 +71,6 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="AcceptanceTestingSection.cs" />
     <Compile Include="Features\WebApi\Products.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -80,6 +79,7 @@
     <Compile Include="Steps\Core\TestingDomain.cs" />
     <Compile Include="Steps\WebApi\ProductsApiStepDefs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Support\DomainHooks.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
