--- a/UnityAopSpike/UnityAopSpike.Web/Web.config
+++ b/UnityAopSpike/UnityAopSpike.Web/Web.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -7,6 +8,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -60,9 +62,7 @@
   </runtime>
 
   <connectionStrings>
-    <add name="UnityAopSpike"
-         providerName="System.Data.SqlClient"
-         connectionString="Data Source=CHRBART-W540;Integrated Security=True;Pooling=False;Database=UnityAopSpike" />
+    <add name="UnityAopSpike" providerName="System.Data.SqlClient" connectionString="Data Source=CHRBART-W540;Integrated Security=True;Pooling=False;Database=UnityAopSpike" />
   </connectionStrings>
 
   <entityFramework>
@@ -71,4 +71,31 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+
+  <log4net>
+    <appender name="Console" type="log4net.Appender.ConsoleAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <!-- Pattern to output the caller's file name and line number -->
+        <conversionPattern value="%5level [%thread] (%file:%line) - %message%newline" />
+      </layout>
+    </appender>
+
+    <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
+      <file value="UnityAop-web-server.log" />
+      <appendToFile value="true" />
+      <maximumFileSize value="100KB" />
+      <maxSizeRollBackups value="2" />
+
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%5level [%thread] (%file:%line) - %message%newline" />
+      </layout>
+    </appender>
+
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="Console" />
+      <appender-ref ref="RollingFile" />
+    </root>
+  </log4net>
+
 </configuration>
