--- a/UnityAopSpike/packages/repositories.config
+++ b/UnityAopSpike/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\UnityAopSpike.AcceptanceTests\packages.config" />
+  <repository path="..\UnityAopSpike.Core\packages.config" />
   <repository path="..\UnityAopSpike.DataAccess.IntegrationTests\packages.config" />
   <repository path="..\UnityAopSpike.DataAccess.UnitTests\packages.config" />
   <repository path="..\UnityAopSpike.DataAccess\packages.config" />
