--- a/UnityAopSpike/UnityAopSpike.Web/Web.config
+++ b/UnityAopSpike/UnityAopSpike.Web/Web.config
@@ -76,7 +76,8 @@
     <appender name="Console" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
         <!-- Pattern to output the caller's file name and line number -->
-        <conversionPattern value="%5level [%thread] (%file:%line) - %message%newline" />
+<!--        <conversionPattern value="%5level [%thread] (%file:%line) - %message%newline" />-->
+        <conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n" />
       </layout>
     </appender>
 
@@ -87,7 +88,8 @@
       <maxSizeRollBackups value="2" />
 
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%5level [%thread] (%file:%line) - %message%newline" />
+<!--        <conversionPattern value="%5level [%thread] (%file:%line) - %message%newline" />-->
+        <conversionPattern value="%-5p %d %5rms %-30.30c{1} - %m%n" />
       </layout>
     </appender>
 
