Preparing for AngularJS.

--- a/UnityAopSpike/UnityAopSpike.AcceptanceTests/App.config
+++ b/UnityAopSpike/UnityAopSpike.AcceptanceTests/App.config
@@ -24,7 +24,7 @@
   <connectionStrings>
     <add name="UnityAopSpike"
          providerName="System.Data.SqlClient"
-         connectionString="Data Source=CHRBART-W540;Integrated Security=True;Pooling=False;Database=UnityAopSpike" />
+         connectionString="Data Source=localhost;Integrated Security=True;Pooling=False;Database=UnityAopSpike" />
   </connectionStrings>
 
   <entityFramework>
