--- a/UnityAopSpike/UnityAopSpike.Web/UnityAopSpike.Web.csproj
+++ b/UnityAopSpike/UnityAopSpike.Web/UnityAopSpike.Web.csproj
@@ -249,6 +249,8 @@
     <Content Include="Scripts\angular-ui\ui-bootstrap.min.js" />
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
+    <Content Include="Scripts\app\app.js" />
+    <Content Include="Scripts\app\controllers\products-controller.js" />
     <Content Include="Scripts\errors.json" />
     <Content Include="Scripts\angular-touch.min.js.map" />
     <Content Include="Scripts\angular-sanitize.min.js.map" />
