--- a/UnityAopSpike/UnityAopSpike.Web/UnityAopSpike.Web.csproj
+++ b/UnityAopSpike/UnityAopSpike.Web/UnityAopSpike.Web.csproj
@@ -226,6 +226,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Partials\product-listing.html" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-cookies.js" />
